# serde_json_shape

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
json_shape/: Cargo.toml  build.rs
json_shape/src/: error.rs  json.llw  lexer.rs  lib.rs  serde.rs  value.rs
json_shape/src/serde/: impls.rs
json_shape/src/shape/: merger.rs  mod.rs
json_shape/src/snapshots/: json_shape__parser__tests__parse_json.snap  json_shape__serde__tests__from_json_object.snap
json_shape/src/value/: subset.rs  subtypes.rs
json_shape/tests/: ai.rs  huge_json_array.rs  mod.rs  proptest_shape.proptest-regressions  proptest_shape.rs  rfc_9535.rs  shape.rs  sources.rs  subset.rs
json_shape/tests/fixture/: test.json
json_shape/tests/snapshots/: huge_json_array__json_array_variant.snap  r#mod__rfc_9535__example_10.snap  r#mod__rfc_9535__example_6.snap  r#mod__rfc_9535__example_7.snap  r#mod__rfc_9535__example_8.snap  r#mod__rfc_9535__example_9.snap  r#mod__shape__complex_json_shape_from_sources.snap  rfc_9535__example_1.snap  rfc_9535__example_2.snap  rfc_9535__example_3.snap
json_shape_build/: Cargo.toml
json_shape_build/fixture/: c.json  object.json
json_shape_build/src/: lib.rs
json_shape_build/src/test/: from_shape.rs  mod.rs
src/: error.rs  lexer.rs  lib.rs  parser.rs  serde.rs  value.rs
src/shape/: merger.rs  mod.rs
src/snapshots/: json_shape__serde__tests__from_json_object.snap
src/value/: subset.rs  subtypes.rs
testdata/: rfc-9535-example-7.json
tests/: ai.rs  mod.rs  rfc_9535.rs  shape.rs  subset.rs
tests/snapshots/: r#mod__huge_json_array__json_array_variant.snap  r#mod__rfc_9535__example_4.snap  r#mod__rfc_9535__example_7.snap  r#mod__rfc_9535__example_9.snap  r#mod__shape__complex_json_shape.snap  r#mod__shape__complex_json_shape_from_sources.snap  rfc_9535__example_1.snap  rfc_9535__example_10.snap  rfc_9535__example_2.snap  rfc_9535__example_3.snap  rfc_9535__example_6.snap  shape__complex_json_shape.snap
