[workspace]
members = [ 
    "json_shape",
]
resolver = "2"

[workspace.lints.clippy]
pedantic = { level = "deny", priority = 5 }
nursery = { level = "deny", priority = 4 }
equatable_if_let = { level = "allow", priority = 11 }
similar_names = { level = "allow", priority = 11 }
use_self = { level = "allow", priority = 11 }
wildcard_imports = { level = "deny", priority = 11 }
missing_const_for_fn = { level = "deny" }
option_if_let_else = { level = "deny" }
or_fun_call = { level = "deny" }

[workspace.lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(tarpaulin_include)'] }
missing_docs = "deny"