[workspace]
members = [ 
    "json_shape", "json_shape_build"
]
resolver = "2"

[workspace.lints.clippy]
all = "deny"
pedantic = "deny"
nursery = "deny"
equatable_if_let = "deny"
similar_names = "deny"
use_self = "deny"
wildcard_imports = "deny"
missing_const_for_fn = "deny"
option_if_let_else = "deny"
or_fun_call = "deny"

[workspace.lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(tarpaulin_include)'] }
missing_docs = "deny"
