[package]
name = "json_shape_build"
version = "0.1.0"
edition = "2024"

[dependencies]
prettyplease = { version = "0.2" }
proc-macro2 = "1.0"
quote = "1.0"
syn = "2.0"

checksum = "0.2.1"
convert_case = "0.8.0"
codegen = "0.2.0"
serde = { version = "1.0.194", features = ["derive"] }
serde_json = "1.0"
json_shape = { path = "../json_shape" }

[lints]
workspace = true
