[package]
name = "json_shape_build"
version = "0.1.1"
edition = "2024"
authors = ["Julia Naomi <jnboeira@outlook.com>",]
description = "Rust library to build JSON shape data structures"
readme = "../README.md"
license = "Apache-2.0"
homepage = "https://github.com/naomijub/serde_json_shape"
repository = "https://github.com/naomijub/serde_json_shape/json_shape"
keywords = ["JSON", "serde", "shape", "build"]
categories = ["encoding", "parser-implementations"]

[dependencies]
checksum = "0.2.1"
convert_case = "0.8.0"
codegen = "0.2.0"
serde = { version = "1.0.194", features = ["derive"] }
serde_json = "1.0"
json_shape = "0.5.1"

[lints]
workspace = true
