[package]
name = "json_shape_build"
version = "0.2.0"
edition = "2024"
authors = ["Julia Naomi <jnboeira@outlook.com>",]
description = "Rust library to build JSON shape data structures"
readme = "../README.md"
license = "Apache-2.0"
homepage = "https://github.com/naomijub/serde_json_shape"
repository = "https://github.com/naomijub/serde_json_shape/json_shape"
keywords = ["JSON", "serde", "shape", "build"]
categories = ["encoding", "parser-implementations"]

[dependencies]
checksum = "0.2"
convert_case = "0.11"
codegen = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
syn = { version = "2.0", features = ["parsing"] }
json_shape = { path = "../json_shape"}

[lints]
workspace = true
